# QuickSES

./: .gitignore  CudaSurf.cu  CudaSurf.h  MANIFEST.in  Makefile  ObjFormats.cpp  ObjFormats.h  README.md  SiESTA.cpp  SmoothMesh.h  pyproject.toml  setup.py  surface_pybind.cpp
siesta/: __init__.py
siesta/scripts/: run_QuickSES.py  view_obj.py
