[build-system]
requires = ["setuptools", "wheel", "make"]
build-backend = "setuptools.build_meta"

[project]
name = "siesta-surf"  # as it would appear on PyPI
version = "0.0.1"
description = "A Python package with C++ extension"
authors = [
    {name = "Yang Zhang", email = "credo_zhang@163.com"},
    {name = "Yang Zhang", email = "y.zhang@bioc.uzh.ch"},
]
dependencies = [
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
include-package-data = true

[project.entry-points.console_scripts]
QuickSES = "siesta.scripts.run_QuickSES:quickses_runner"
viewobj = "siesta.scripts.view_obj:view3d_runner"